syntax = "proto3";

option go_package = "github.com/escalopa/gochat/pb";

package pb;

message BasicResponse {
  uint32 status = 1;
  string message = 2;
}
